--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "vuepress": "^2.0.0-beta.46"
   },
   "scripts": {
+    "dev": "vuepress dev docs",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   }
