--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "devDependencies": {
     "@vuepress/plugin-search": "^2.0.0-beta.46",
-    "vuepress": "^2.0.0-beta.46"
+    "vuepress": "^2.0.0-beta.46",
+    "vuepress2-plugin-full-text-search": "^0.2.0"
   },
   "scripts": {
     "dev": "vuepress dev docs",
