--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "dev": "vuepress dev docs"
   },
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.51",
-    "@vuepress/plugin-search": "^2.0.0-beta.51",
+    "@vuepress/client": "2.0.0-beta.53",
     "vue": "^3.2.29",
-    "vuepress": "2.0.0-beta.51",
-    "vuepress-theme-hope": "2.0.0-beta.106"
+    "vuepress": "2.0.0-beta.53",
+    "vuepress-plugin-search-pro": "^2.0.0-beta.130",
+    "vuepress-theme-hope": "2.0.0-beta.126"
   }
 }
