--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "muan",
   "version": "2.0.0",
-  "description": "A project of vuepress-theme-hope",
+  "description": "作草分茶的博客",
   "license": "MIT",
   "type": "module",
   "scripts": {
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "@vuepress/client": "2.0.0-beta.61",
-    "vue": "^3.2.29",
+    "vue": "^3.2.47",
     "vuepress": "2.0.0-beta.61",
     "vuepress-plugin-search-pro": "^2.0.0-beta.130",
     "vuepress-theme-hope": "2.0.0-beta.201"
