--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
     "dev": "vuepress dev docs"
   },
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.63",
-    "vue": "^3.2.47",
-    "vuepress": "2.0.0-beta.63",
-    "vuepress-plugin-search-pro": "^2.0.0-beta.226",
-    "vuepress-theme-hope": "2.0.0-beta.226"
+    "@vuepress/bundler-vite": "2.0.0-rc.18",
+    "@vuepress/plugin-markdown-hint": "2.0.0-rc.60",
+    "@vuepress/plugin-markdown-image": "2.0.0-rc.60",
+    "@vuepress/plugin-markdown-tab": "2.0.0-rc.56",
+    "@vuepress/plugin-prismjs": "2.0.0-rc.56",
+    "@vuepress/plugin-revealjs": "2.0.0-rc.56",
+    "vue": "^3.5.13",
+    "vuepress": "2.0.0-rc.18",
+    "vuepress-plugin-search-pro": "2.0.0-rc.59",
+    "vuepress-theme-hope": "2.0.0-rc.59"
+  },
+  "dependencies": {
+    "@vue/repl": "^4.4.2",
+    "marked": "^14.1.0"
   }
 }
