--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "dev": "vuepress dev docs"
   },
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.63",
-    "vue": "^3.2.47",
-    "vuepress": "2.0.0-beta.63",
-    "vuepress-plugin-search-pro": "^2.0.0-beta.226",
-    "vuepress-theme-hope": "2.0.0-beta.226"
+    "@vuepress/bundler-vite": "2.0.0-rc.18",
+    "sass-embedded": "^1.81.0",
+    "vue": "^3.5.13",
+    "vuepress": "2.0.0-rc.18",
+    "vuepress-theme-plume": "1.0.0-rc.118"
   }
 }
